# Rubik-Dev

./: CMakeLists.txt  README.md  Rubik.kdev4  _intro_screen.cpp  abreviations.lisp  abreviations.repl  autorun.lisp  autotest.lisp  auxiliary.cpp  auxiliary.h  auxiliary_merge.cpp  base.lisp  cube_topology.cpp  cube_topology.h  def_colors.cpp  def_colors.h  editor.cpp  editor.h  editor_buffer.cpp  editor_buffer.h  first.lisp  func_test.lisp  global_variables.cpp  globals.h  lift.cpp  lift.h  main.cpp  repl.cpp  repl_autocomp.cpp  rotation_groups.cpp  rotation_range.cpp  rubik.cpp  rubik.h  rubik3d.cpp  rubik3d.h  rubik3d_visualization.cpp  rubik_alg.cpp  rubik_bf.h  rubik_brute_force.cpp  rubik_brute_force_cluster.cpp  (+17 more)
Documents/Hun-Magyar/: .directory  01_projekt_információk.odt  02_alapkoncepciók.odt
